[tool.poetry]
name = "pw_tester"
version = "0.1.0"
description = "Password complexity and brute force time analyzer"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "pw_tester.py"}]

[tool.poetry.dependencies]
python = "^3.8.1"
colorama = "^0.4.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"

[tool.poetry.scripts]
pw-tester = "pw_tester:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
